<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_services"
        android:title="@string/services" />
    <item
        android:id="@+id/navigation_entertainment"
        android:icon="@drawable/ic_entertainment"
        android:title="@string/entertainment" />
    <item
        android:id="@+id/navigation_advertisement"
        android:icon="@drawable/ic_ads"
        android:title="@string/advertisement" />
    <item
        android:id="@+id/navigation_my_home"
        android:icon="@drawable/ic_my_home"
        android:title="@string/my_home" />
</menu>