<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="MissingPrefix">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40mdp"
                    app:cardCornerRadius="@dimen/_100mdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_top"
                        android:layout_width="@dimen/_50mdp"
                        android:layout_height="@dimen/_50mdp"
                        android:layout_margin="@dimen/_28mdp"
                        app:srcCompat="@drawable/ic_code" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/isn"
                    android:text="@string/enter_code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp"
                    app:layout_constraintEnd_toEndOf="@+id/cv_top"
                    app:layout_constraintStart_toStartOf="@+id/cv_top"
                    app:layout_constraintTop_toBottomOf="@+id/cv_top" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12mdp"
                    android:layout_marginTop="@dimen/_4mdp"
                    android:fontFamily="@font/isn"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_4mdp"
                    android:text="@string/login_code"
                    android:textSize="@dimen/_10font_mdp"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <com.mukesh.OtpView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18font_mdp"
                    app:OtpItemCount="5"
                    app:OtpItemHeight="@dimen/_36mdp"
                    app:OtpItemRadius="@dimen/_6mdp"
                    app:OtpItemSpacing="@dimen/_10mdp"
                    app:OtpItemWidth="@dimen/_36mdp"
                    app:OtpLineColor="@drawable/pinview_state_selector"
                    app:OtpLineWidth="@dimen/_2mdp"
                    app:OtpState_filled="false"
                    app:OtpViewType="rectangle"
                    android:layout_marginTop="@dimen/_16mdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/desc"
                    tools:text="13215" />

                <ViewSwitcher
                    android:id="@+id/vs_send_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12mdp"
                    android:layout_marginTop="@dimen/_16mdp"
                    android:background="@drawable/bg_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/otp_view">

                    <TextView
                        android:id="@+id/tv_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:fontFamily="@font/isnb"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_50mdp"
                        android:paddingVertical="@dimen/_5mdp"
                        android:text="@string/send_code"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14font_mdp" />

                    <com.github.ybq.android.spinkit.SpinKitView
                        style="@style/SpinKitView.Small.ThreeBounce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                </ViewSwitcher>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>